Thu Jun 30 12:38:25 CEST 2005 Michael Neumann <mneumann@ntecs.de>

	* lib/wee/response.rb: require 'cgi'

Thu Jun 30 12:36:18 CEST 2005 Michael Neumann <mneumann@ntecs.de>

	* lib/wee/response.rb (Wee::ErrorResponse#render): correctly format error
	  responses (patch by Aleksi Niemela)

Thu Jun 30 12:10:36 CEST 2005 Michael Neumann <mneumann@ntecs.de>

	* lib/wee/core.rb, lib/wee/core/idgen.rb, lib/wee/idgen/md5.rb,
	  lib/wee/idgen/simple.rb: Introduced abstract class Wee::IdGenerator
	  and subclass Wee::Md5IdGenerator and Wee::SimpleIdGenerator from it. 

	* lib/wee/core/renderer.rb, lib/wee/core/presenter.rb,
	  lib/wee/renderer/html/canvas.rb, lib/wee.rb: 
	  Introduce base class of all renderer classes: Wee::Renderer. 
	  
	  Rename Wee::HtmlCanvas to Wee::HtmlCanvasRenderer and inherit from
	  Wee::Renderer instead of Wee::Canvas. Wee::Canvas is now a mixin
	  module as has been renamed to Wee::CanvasMixin.

	  Rename @renderer in Wee::Presenter into @__renderer to avoid
	  possible problems if this variable is accidently used by a
	  user-defined component.

	* lib/wee/template.rb: Added :local option, with which one can
	  specify a template file relative to the component file, e.g:

	    class MyComponent < Wee::Component
	      template :render_this, :local => 'this.tmpl'
	    end

	  Futhermore, added an :r_as_param option, which generates a render
	  method that takes a renderer object as parameter 'r'.

	* lib/wee/renderer/html/brushes.rb, lib/wee/renderer/html/canvas.rb:
	  Method Brush::SelectListTag#selected takes optionally a block. In
	  this case, only those elements will be selected, for which the block
	  evaluates to true. This allows us to use some custom compare
	  functions instead of the default ones '==' or 'include?'.

	  Method Brush::SelectListTag#labels also might be passed a block, in
	  which case the label is the return value of the block called with
	  the corresponding item as parameter.
