@@ -1,1 +1,0 @@
-class Wee::Context < Struct.new(:request, :response); end
