@@ -1,1 +1,0 @@
-class Wee::RenderingContext < Struct.new(:request, :response, :callbacks, :document); end
